<resources>

    <string name="app_name">BPM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Splash-->
    <string name="slogan">¡TU SALUD EN EL BOLSILLO!</string>
    <string name="email_hint" translatable="false" >E-mail</string>
    <string name="pass_hint">Contraseña</string>
    <string name="loginentrar">Entrar</string>
    <string name="loginregister">¿No tienes cuenta?, registrate</string>
    <string name="heartrate">Ritmo cardíaco</string>
    <string name="list">Mediciones</string>
    <string name="help">Ayuda</string>
    <string name="perfil">Perfil</string>
    <string name="bluetoothtext">Obtener medición</string>
    <string name="addmeasurement">Añadir medición</string>

    <!--Measurement list-->
    <string name="datetext">Fecha</string>
    <string name="systolicpressure">P.Sistólica</string>
    <string name="diastolicpressure">P.Diastólica</string>
    <string name="pulsetext">Pulso</string>
    <string name="measurememtheader">Mediciones</string>
    <string name="recoverymeasurements">Recuperando mediciones</string>

    <!--Action bar-->
    <string name="principaltext">Menu Principal</string>
    <string name="measurementlistheader">Mediciones</string>
    <string name="heartbeatheader">Ritmo cardíaco</string>


    <!--BPMActivityConroller-->
    <string name="dialogexit">¿Estas seguro que quieres salir?</string>
    <string name="exit">Salir</string>
    <string name="cancel">Cancelar</string>
    <string name="nonsupportedbluetooth">Este dispositivo no soporta bluetooth</string>
    <string name="non_enabledbluetooth">El bluetooth no esta conectado. ¿Desea conectarlo?</string>
    <string name="dialogtitlebluetooth" traslatable="false">Bluetooth</string>
    <string name="failenablebluetooth">No se puede activar al bluetooth</string>
    <string name="dialogdevices">Escoge el tensiómetro</string>
    <string name="searchdevices">Buscando dispositivos</string>
    <string name="connectionbluetooth">Conexión establecida</string>
    <string name="connectionrefbluetooth">Fallo en la conexión</string>
    <string name="connectionstablished">"Conexión establecida. Esperando envio de la medición..."</string>
    <string name="waitconnection">"Esperando conexión..."</string>
    <string name="socketconnfail">Se ha perdido la conexión</string>
    <string name="measurements">Medición recibida</string>
    <string name="systolic">Presión sistólica </string>
    <string name="diastolic">Presión diastólica </string>
    <string name="pulse">Pulso</string>
    <string name="processcanceled">El bluetooth necesita ser visible para ser reconocido por otro dispositivo. Proceso Cancelado</string>

    <!--Hear beat-->
    <string name="hearbeattext">Calculando ritmo cardíaco...</string>
    <string name="manualpressure">Añadir medición</string>

    <!--Obtain pressures-->
    <string name="obtainpressurestext">Introduce tus presiones arteriales</string>
    <string name="systolictextview">Introduce tu presión sistólica</string>
    <string name="daistolictextview">Introduce tu presión diastólica</string>
    <string name="pulsetextview">Introduce tu pulso:</string>
    <string name="sendbutton">Enviar</string>
    <string name="dialogincorrectfields">Datos incorrectos</string>
    <string name="systolicpressuredialog">La presión sistólica introducida es incorrecta. Los valores estan entre 50 y 240</string>
    <string name="diastolicpressuredialog">La presión diastólica introducida es incorrecta. Los valores estan entre 30 y 140</string>
    <string name="pulsepressuredialog">El pulso introducida es incorrecto. Los valores estan entre 30 y 240</string>
    <string name="mandatoryfields">Todos los campos son obligatorios</string>
    <string name="dialogpositivbutton">Aceptar</string>

    <!--Register Activity-->
    <string name="registertextindication">Rellene los campos obligatorios de registro</string>
    <string name="addyourname">Introduzca su nombre:</string>
    <string name="addyoursurnames">Introduzca sus apellidos: </string>
    <string name="addyourage">Introduzca su edad:</string>
    <string name="location">Pulse autolocalización para completar los tres siguientes campos:</string>
    <string name="addyoutlocation">Auto localización</string>
    <string name="signin">Registrarse</string>
    <string name="emailregister">Introduzca un e-mail:</string>
    <string name="dialogemail">Introduzca un e-mail valido</string>
    <string name="citytext">Introduzca su ciudad</string>
    <string name="provincetext">Introduzca su administración(CA)</string>
    <string name="addcountry">Introduzca su país:</string>
    <string name="dialogproblem">No se puede obtener una localización</string>
    <string name="locationfound">Ubicación encontrada</string>
    <string name="locationfoundtext">¿Es este tu lugar de residencia?</string>
    <string name="pass">Introduce una contraseña:</string>
    <string name="repeatpass">Repite la contraseña:</string>
    <string name="passnotmatching">Las contraseñas no coinciden</string>
    <string name="registerprocesserror">Error en el proceso de registro</string>
    <string name="yestext">Si</string>
    <string name="notext">No</string>
    <string name="fieldnotfound">No encontrado</string>
    <string name="userloginerror">Email o contraseña incorrectos</string>

    <string name="loginincorrect">El email o contraseña son incorrectos</string>

    <!--Preference activity-->

    <string name="networkpreferencestitle">Mediciones</string>
    <string name="summarynetwork">Permite elegir la conexión a internet utilizada para descargar las mediciones</string>
    <string-array name="preferencesnetwork">
            <item>Solo con WiFi conectado</item>
            <item>Con WiFi o datos móviles</item>
    </string-array>

    <string-array name="preferencesnetworkvalues">
        <item>WiFi</item>
        <item>All</item>
    </string-array>

    <string name="headernetwork">Preferencias de red</string>
    <string name="headeractivity">Opciones</string>
    <string name="headerlanguage">Idioma</string>
    <string name="headernotification">Notificaciones</string>

    <string-array name="preferenceslanguageentries">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>
    <string-array name="preferenceslanguagevalues">
        <item>es</item>
        <item>en</item>
    </string-array>
    <string-array name="preferencesnotifications">
        <item>yes</item>
        <item>no</item>
    </string-array>
    <string-array name="preferencesnotificationsidiom">
        <item>si</item>
        <item>no</item>
    </string-array>
    <string name="appPreferences">Preferencias de la aplicación</string>
    <string name="summarylanguage">Permite escoger el idioma de la aplicación</string>
    <string name="notifications">Escoge si quieres recibir notificaciones sobre el estado de salud
        en este dispositivo</string>


    <!--Profile-->
    <string name="headerprofile">Perfil</string>
    <string name="name">Nombre:</string>
    <string name="surname">Apellidos:</string>
    <string name="email">E-mail:</string>
    <string name="Age">Edad:</string>
    <string name="city">Población:</string>
    <string name="administration">Administración:</string>
    <string name="country">País:</string>
    <string name="erroruserprofile">Error al recuperar los datos de usuario</string>
    <string name="notNetwork">Según tus preferencias solo puedes descargar la mediciones con WI-FI</string>


    <!--Help-->
    <string name="helpheader">Ayuda</string>
    <string name="bluetoothinfoheader">Información sobre la obtención de mediciones</string>
    <string name="bluetoothinfo">Para obtener los datos desde el tensiómetro, primero tienes que pulsar el botón obtener medición en el menú principal, de esta forma el bluetooth se activara sino esta activado, y estará esperando la conexión de un dispositivo externo. \nCuando el tensiómetro envia la medición en un archivo XML el dispositvo se encarga de tratarlo, de esta forma obtiene los valores de la medición. Una vez se ha recibido la medición se guarda en el cloud.</string>
    <string name="hearrateinfoheader">información acerca del sensor de pulsaciones</string>
    <string name="heartrateinfo">Para realizar un buen uso del sensor de pulsaciones tienes que poner el móvil en un posición plana, después mantener la punta del dedo sobre la cámara (sin apretar), una vez este la pantalla en rojo y se vea la pulsación reflejada en la imagen, saldrá la medición.</string>

    <!--GCM strings-->
    <string name="recoveryregidOK">Dispositivo registrado en GCM</string>
    <string name="unregister">Dispositivo desregistrado en GCM</string>
    <string name="goodsendmeasurement">Presiones enviadas correctamente</string>
    <string name="errorsendmeasurement">Error enviando medición. La medición ha sido guardada.</string>
    <string name="errorreceivingpressures">Error reciviendo las mediciones del usuarios</string>
    <string name="healthstatus">Su estado de salud</string>
    <string name="pendingmeasurement">Hay una medición pendiente de envio</string>

    <!--WS -->
    <string name="token_error">Error enviando gcm token</string>
    <string name="token_error_delete">Error borrando gcm token</string>
    <string name="error_adding_measurement">Error añadiendo medicion</string>
    <string name="error_sending_measurement">Error enviando medicion</string>
    <string name="measurement_send">Medición enviada correctamente</string>
</resources>
