<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/descriptionregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="19sp"
        android:layout_marginTop="18dp"
        android:text="@string/registertextindication"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/addyourname"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="start"/>

        <EditText
            android:id="@+id/edittextregister1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ems="12"
            android:text=""
            android:maxLines="1"
            android:inputType="text"
            android:background="@drawable/edittextshape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/addyoursurnames"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="start"/>

        <EditText
            android:id="@+id/edittextregister2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ems="12"
            android:maxLines="1"
            android:text=""
            android:inputType="text"
            android:gravity="start"
            android:background="@drawable/edittextshape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/emailregister"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="start"/>

        <EditText
            android:id="@+id/edittextregister3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ems="12"
            android:maxLines="1"
            android:text=""
            android:inputType="text"
            android:background="@drawable/edittextshape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/pass"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="start"/>

        <EditText
            android:id="@+id/edittextregister4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ems="12"
            android:maxLines="1"
            android:text=""
            android:inputType="textPassword"
            android:background="@drawable/edittextshape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/repeatpass"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="start"/>

        <EditText
            android:id="@+id/edittextregister5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ems="12"
            android:maxLines="1"
            android:text=""
            android:inputType="textPassword"
            android:background="@drawable/edittextshape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/addyourage"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="start"/>

        <EditText
            android:id="@+id/edittextregister6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ems="3"
            android:maxLines="1"
            android:text=""
            android:inputType="number"
            android:background="@drawable/edittextshape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/location"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="start"/>


        <Button
            android:visibility="visible"
            android:id="@+id/autolocation"
            android:background="@drawable/buttonselector"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/addyoutlocation"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/citytext"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="start"/>

        <EditText
            android:id="@+id/edittextregister7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ems="12"
            android:maxLines="1"
            android:text=""
            android:inputType="text"
            android:background="@drawable/edittextshape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/provincetext"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="start"/>

        <EditText
            android:id="@+id/edittextregister8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ems="12"
            android:maxLines="1"
            android:text=""
            android:inputType="text"
            android:background="@drawable/edittextshape"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/addcountry"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:gravity="start"/>

        <EditText
            android:id="@+id/edittextregister9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:ems="12"
            android:maxLines="1"
            android:text=""
            android:inputType="text"
            android:gravity="start"
            android:background="@drawable/edittextshape"/>
        <Button
            android:visibility="visible"
            android:id="@+id/signingbutton"
            android:background="@drawable/buttonselector"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/signin"
            android:layout_height="40dp" />

    </LinearLayout>
    </LinearLayout>
     </ScrollView>
</LinearLayout>
