<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/graybackground">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/obtainpressurestext"
    android:gravity="center_horizontal"
    android:textSize="16sp"

    />
<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:text="@string/systolictextview"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:gravity="start"/>

    <EditText
        android:id="@+id/mpressuresedittext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:ems="10"
        android:text=""
        android:inputType="number"
        android:background="@drawable/edittextshape"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:text="@string/daistolictextview"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:gravity="start"/>

    <EditText
        android:id="@+id/mpressuresedittext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:ems="10"
        android:text=""
        android:inputType="number"
        android:background="@drawable/edittextshape"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:text="@string/pulsetextview"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:gravity="start"/>

    <EditText
        android:id="@+id/mpressuresedittext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:ems="10"
        android:text=""
        android:inputType="number"
        android:background="@drawable/edittextshape"/>

        <Button
            android:visibility="visible"
            android:id="@+id/mpressuressend"
            android:background="@drawable/buttonselector"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sendbutton"
            android:layout_height="40dp" />

    </LinearLayout>
</LinearLayout>

